CDR-587 Make AqlPath immutable
- PredicateLogicalAndOperation immutable
- introduced CharSequenceHelper::trim