@@ -18,16 +18,15 @@
 package org.ehrbase.aql.dto.path.predicate;
 
 import java.io.Serializable;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Stream;
 import org.ehrbase.aql.dto.condition.LogicalOperatorDto;
 
 /**
  * @author Stefan Spiska
  */
-public class PredicateLogicalAndOperation
+public final class PredicateLogicalAndOperation
         implements LogicalOperatorDto<PredicateLogicalOperatorSymbol, SimplePredicateDto>,
                 SimplePredicateDto,
                 Serializable {
@@ -36,11 +35,11 @@ public class PredicateLogicalAndOperation
     private List<SimplePredicateDto> values;
 
     public PredicateLogicalAndOperation() {
-        this.values = new ArrayList<>();
+        this.values = List.of();
     }
 
     public PredicateLogicalAndOperation(SimplePredicateDto... values) {
-        this.values = new ArrayList<>(Arrays.asList(values));
+        this.values = List.of(values);
     }
 
     @Override
@@ -54,13 +53,10 @@ public class PredicateLogicalAndOperation
     }
 
     @Override
-    public void setSymbol(PredicateLogicalOperatorSymbol symbol) {
-        throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public void setValues(List<SimplePredicateDto> values) {
-        this.values = values;
+    public PredicateLogicalAndOperation addValues(Stream<SimplePredicateDto> valuesStream) {
+        SimplePredicateDto[] newValues =
+                Stream.concat(values.stream(), valuesStream).toArray(SimplePredicateDto[]::new);
+        return new PredicateLogicalAndOperation(newValues);
     }
 
     @Override
